--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -134,3 +134,30 @@ select {
 h1 a {
     color: #eeeeee;
 }
+
+table#report_listth {
+	font-weight: bold;
+	padding: 10px 2%;
+}
+
+table#report_list .report_name {
+	width: 20%;
+	padding: 10px 2%;
+}
+
+table#report_list .report_date {
+	width: 20%;
+}
+
+table#report_list .report_title {
+	width: 37%;
+}
+
+rable#report_list .report_action {
+	width: 13%;
+}
+
+
+
+
+
